--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app>
+
 <head>
-    <meta charset="UTF-8">
-    <title>NodeJS Simple App</title>
-
-    <!-- CSS -->
-    <!-- load bootstrap and custom stylesheet -->
-    <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/superhero/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="stylesheets/main.css">
-
+    <% include partials/head.ejs %>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
 </head>
-<body>
 
-<div class="container">
-    <div class="jumbotron">
-        <h1 style = "font-size: 210%;">This Is Heroku Minimum!</h1>
-        <h2>Made using NodeJS, Express, EJS</h2>
-        <p><a href="https://github.com/dMcGaa/min-nodejs-heroku">GitHub</a></p>
-        <p style = "font-size: 80%;"><i>updated 2016-01-02</i></p>
+<title>Front End Practice - Home</title>
+
+<body>
+    <header>
+        <% include partials/header.ejs %>
+    </header>
+
+    <div class="container">
+        <div class="jumbotron">
+            <h1 style="font-size: 210%;">Front End Practice</h1>
+            <input type="text" ng-model="yourName" placeholder="Enter a name here">
+            <hr>
+            <h3>Hello {{yourName}}!</h3>
+            <h4>Made using NodeJS, Express, Angular, EJS</h4>
+        </div>
     </div>
-</div>
-    
+
+    <footer>
+        <% include partials/footer.ejs %>
+    </footer>
+
 </body>
+
 </html>
