--- a/views/pages/partials/header.ejs
+++ b/views/pages/partials/header.ejs
@@ -8,12 +8,12 @@
                 <li><a href="/">Home</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a id="header-signup" href="/signUp">Sign Up</a></li>
-                <li><a id="header-login" href="/connect/twitter">
-                    <i class="fa fa-twitter"></i>
-                    Log In</a></li>
-                <li><a id="header-user" href="/home" style = "display:none;">User</a></li>
-                <li><a id="header-logout" href="/" style = "display:none;">Log Out</a></li>
+                <!--<li><a id="header-signup" href="/signUp">Sign Up</a></li>-->
+                <!--<li><a id="header-login" href="/connect/twitter">-->
+                <!--    <i class="fa fa-twitter"></i>-->
+                <!--    Log In</a></li>-->
+                <!--<li><a id="header-user" href="/home" style = "display:none;">User</a></li>-->
+                <!--<li><a id="header-logout" href="/" style = "display:none;">Log Out</a></li>-->
             </ul>
         </div>
     </nav>
