update readme, update git repo link

--- a/views/pages/partials/footer.ejs
+++ b/views/pages/partials/footer.ejs
@@ -1,3 +1,3 @@
 <div align = "center">
-<div style="font-size: 80%;"><a href="https://github.com/dMcGaa/fr-end.git">GitHub: dMcGaa</a></div>
+<div style="font-size: 80%;"><a href="https://github.com/dMcGaa/vanillabeanbag.git">GitHub: dMcGaa</a></div>
 </div>
