--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <% include partials/head.ejs %>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+        <script src="/js/angular.min.js"></script>
 </head>
 
 <title>Front End Practice - Home</title>
