use various Angular ng- directives

--- a/views/pages/drinks.ejs
+++ b/views/pages/drinks.ejs
@@ -17,9 +17,24 @@
     <div class="container">
         <div class="jumbotron">
             <!--  Product Container  -->
-            <div class="list-group-item" ng-repeat="choice in store.choices">
-                <h3>{{choice.name}} <em class="pull-right">{{choice.price | currency}}</em></h3>
-            </div>
+            <section class="tab" ng-controller="TabController as tab">
+                <ul class="nav nav-pills">
+                    <li ng-class="{active: tab.isSet(1)}">
+                        <a ng-click="tab.setTab(1)">{{store.choices[0].name}}</a></li>
+                    <li ng-class="{active: tab.isSet(2)}">
+                        <a ng-click="tab.setTab(2)">{{store.choices[1].name}}</a></li>
+                    <li ng-class="{active: tab.isSet(3)}">
+                        <a ng-click="tab.setTab(3)">{{store.choices[2].name}}</a></li>
+                </ul>
+                <div ng-show="tab.isSet(1)">
+                    <blockquote>{{store.choices[0].description}}</blockquote>
+                </div>
+                <div ng-show="tab.isSet(2)">
+                    <blockquote>{{store.choices[1].description}}</blockquote>
+                </div>
+                <div ng-show="tab.isSet(3)">
+                    <blockquote>{{store.choices[2].description}}</blockquote>
+                </div>
         </div>
     </div>
 
