--- a/views/pages/drinks.ejs
+++ b/views/pages/drinks.ejs
@@ -5,6 +5,7 @@
     <% include partials/head.ejs %>
         <script src="/js/angular.min.js"></script>
         <script src="/js/app-drink.js"></script>
+        <link rel="stylesheet" href="/stylesheets/app-drink.css">
 </head>
 
 <title>Front End Practice - Drinks</title>
@@ -36,7 +37,7 @@
                             </blockquote>
                         </li>
                     </ul>
-                    <form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewCtrl.addReview(store.choices[0])">
+                    <form name="reviewForm" novalidate ng-controller="ReviewController as reviewCtrl" ng-submit="reviewForm.$valid && reviewCtrl.addReview(store.choices[0])">
 
                         <!--  Live Preview -->
                         <blockquote ng-show="review">
@@ -47,7 +48,7 @@
                         <!--  Review Form -->
                         <h4>Submit a Review</h4>
                         <fieldset class="form-group">
-                            <select ng-model="reviewCtrl.review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]" title="Stars">
+                            <select required ng-model="reviewCtrl.review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]" title="Stars">
                                 <option value="">Rate the Product</option>
                             </select>
                         </fieldset>
@@ -55,7 +56,7 @@
                             <textarea ng-model="reviewCtrl.review.body" class="form-control" placeholder="Write a short review of the product..." title="Review"></textarea>
                         </fieldset>
                         <fieldset class="form-group">
-                            <input ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="mrMean@example.org" title="Email" />
+                            <input required ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="mrMean@example.org" title="Email" />
                         </fieldset>
                         <fieldset class="form-group">
                             <input type="submit" class="btn btn-primary pull-right" value="Submit Review" />
