--- a/views/pages/sage.ejs
+++ b/views/pages/sage.ejs
@@ -21,64 +21,99 @@
             <!--    <li>Blog</li>-->
             <!--    <li>Get In Touch</li>-->
             <!--</ul>-->
-        Home  X  Projects  X  About  X  Services  X  Blog  X  Get in Touch    
+            Home X Projects X About X Services X Blog X Get in Touch
         </div>
-        EN  X  Search
-        </div>
-    
-    <div class="view-intro">
-        <h1>WE BUILD WEBSITES AND<br>APPS THAT PEOPLE LOVE</h1>
-        <div style="color: rgb(127, 122, 124);">
-            Full suite of internet services in areas of website development, web based<br>
-            enterprise solutions, corporate identity and advertisement</div>
-        <div class="link-box">EXPLORE MORE</div>
+        EN X Search
     </div>
-    
-    <div class="view-projects">
+
+    <div class="view-intro">
+        <h1 style="margin-top: 100px; margin-bottom: 20px;">WE BUILD WEBSITES AND<br>APPS THAT PEOPLE LOVE</h1>
+        <div style="color: rgb(127, 122, 124); margin-bottom: 25px;">
+            Full suite of internet services in areas of website development, web based
+            <br> enterprise solutions, corporate identity and advertisement</div>
+        <div class="link-box" style="margin-bottom: 150px">EXPLORE MORE</div>
+    </div>
+
+    <div class="view-projects row">
         <div class="col-6">
             <div style="text-align: center;">ALL PROJECTS</div>
             <div class="project-box">
                 <div class="project-image">Test</div>
-                (one for each project)
+                PROJECT ONE
+                <div style="color: rgb(127, 122, 124);">Stuff</div>
             </div>
             <div class="project-box">
                 <div class="project-image">Test</div>
-                (one for each project)
+                PROJECT TWO
+                <div style="color: rgb(127, 122, 124);">Other Stuff</div>
             </div>
         </div>
         <div class="col-6">
-            <div style="text-align: left;">ALL  X  Editorial  X  digital  X  photography  X  mobile  X  identity</div>
+            <div style="text-align: left;">ALL X Editorial X digital X photography X mobile X identity</div>
             <div class="project-box">
                 <div class="project-image">Test</div>
-                (one for each project)
+                PROJECT THREE
+                <div style="color: rgb(127, 122, 124);">More Other Stuff</div>
             </div>
             <div class="project-box">
                 <div class="project-image">Test</div>
-                (one for each project)
+                PROJECT FOUR
+                <div style="color: rgb(127, 122, 124);">Even More Other Stuff</div>
             </div>
         </div>
+    </div>
+    
+    <div class="view-banner">
+        SHOWCASING YOUR WORK HAS NEVER BEEN MORE FUN
+        <div style="color: rgb(127, 122, 124);">
+        Discover elegant solutions for your online portfolio. Fast, reliable, affordable...
+        </div>
+        <div class="link-box">PURCHASE NOW!</div>
     </div>
     
     <div class="view-footer">
         <div class="row" style="width: 75%;">
             <div class="col-3 footer-info">
                 <div>SAGE</div>
+                FLEXIBLE MULTI-CONCEPT PORTFOLIO THEME. DIFFERENT LAYOUTS, COLOR VARIATIONS, PORTFOLIO/GALLERY OPTOINS
+                AND OTHER PAGES. WORKS WELL FOR ANY STUDIO, PORTFOLIO, OR AGENCY.
             </div>
             <div class="col-3 footer-info">
                 <div>About</div>
+                <hr>
+                <ul>
+                    <li>About Theme</li>
+                    <li>Our Mission</li>
+                    <li>Philosophy</li>
+                    <li>Principles</li>
+                    <li>History</li>
+                    <li>Approach</li>
+                </ul>
             </div>
             <div class="col-3 footer-info">
                 <div>Our Works</div>
+                <hr>
+                <ul>
+                    <li>Campaigns</li>
+                    <li>Mobile Applications</li>
+                    <li>Editorial</li>
+                    <li>Digital Production</li>
+                    <li>Installations</li>
+                    <li>Trade</li>
+                </ul>
             </div>
             <div class="col-3 footer-info">
                 <div>Mailing List</div>
+                <hr>
                 Sage news, offers and more. We won't share your address with anyone else.
                 <div>Enter Email</div>
             </div>
-        <div style="text-align: left;">2016 Sage Theme  X  Terms of Use  X  Prviacy Policy</div>
         </div>
+        <div style="text-align: left; width: 75%;">2016 Sage Theme X Terms of Use X Prviacy Policy</div>
     </div>
-    
+
+
+
     <footer>
     </footer>
 
