fixed column breaking by separating project elements from column heading

--- a/views/pages/sage.ejs
+++ b/views/pages/sage.ejs
@@ -33,10 +33,16 @@
             <br> enterprise solutions, corporate identity and advertisement</div>
         <div class="link-box" style="margin-bottom: 150px">EXPLORE MORE</div>
     </div>
-
     <div class="view-projects row">
         <div class="col-6">
             <div style="text-align: center;">ALL PROJECTS</div>
+        </div>
+        <div class="col-6">
+            <div style="text-align: left;">ALL X Editorial X digital X photography X mobile X identity</div>
+        </div>
+    </div>
+    <div class="view-projects row">
+        <div class="col-6">
             <div class="project-box">
                 <div class="project-image">Test</div>
                 PROJECT ONE
@@ -49,8 +55,7 @@
             </div>
         </div>
         <div class="col-6">
-            <div style="text-align: left;">ALL X Editorial X digital X photography X mobile X identity</div>
-            <div class="project-box">
+          <div class="project-box">
                 <div class="project-image">Test</div>
                 PROJECT THREE
                 <div style="color: rgb(127, 122, 124);">More Other Stuff</div>
