take advantage of caching, let CDN deliver common JS files (Angular, jQuery, bootstrap, fontawesome)

--- a/views/pages/drinks.ejs
+++ b/views/pages/drinks.ejs
@@ -3,8 +3,7 @@
 
 <head>
     <% include partials/head.ejs %>
-        <script src="/js/angular.min.js"></script>
-        <script src="/js/app-drink.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
         <link rel="stylesheet" href="/stylesheets/app-drink.css">
 </head>
 
@@ -76,6 +75,7 @@
         <% include partials/footer.ejs %>
     </footer>
 
+    <script src="/js/app-drink.js"></script>
 </body>
 
 </html>
