--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -4,7 +4,7 @@
 <!-- load bootstrap and custom stylesheet -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/superhero/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<script type="text/javascript" src="/js/jquery-2.2.0.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <link rel="stylesheet" href="/stylesheets/main.css">
 
 <link rel="icon" type="image/png" href="/images/vanillabeanbag-32x32.png" sizes="32x32">
