--- a/views/pages/drinks.ejs
+++ b/views/pages/drinks.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <% include partials/head.ejs %>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
         <link rel="stylesheet" href="/stylesheets/app-drink.css">
 </head>
 
