cuda - practice site html and css

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,6 +21,7 @@
             <h3>Hello {{yourName}}!</h3>
             <h4>Made using NodeJS, Express, Angular, EJS</h4>
             <a href='/sage'>Sage</a><br>
+            <a href='/site-cuda'>Cuda</a><br>
             <a href='/drinks'>Drinks</a>
         </div>
     </div>
