--- a/views/pages/site-cuda.ejs
+++ b/views/pages/site-cuda.ejs
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/superhero/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/app-cuda.css">
+    <link rel="icon" type="image/png" href="/images/vanillabeanbag-32x32.png" sizes="32x32">
 </head>
 
 <title>Front End Practice - Cuda</title>
@@ -12,87 +13,102 @@
     <header>
     </header>
 
-    <div class="view-panel" id="cuda-welcome">
-        <div class="nav-links">
-            <img src="/images/site-cuda/logo.svg" style="margin:10px;">
-            <div style="display:inline;">
-                Home X About X Work X Blog X Contact
+    <div class="clearfix" id="cuda-welcome">
+        <div class="view-panel" style="display:block;">
+            <div class="clearfix" style="margin-top: 15px;">
+                <img src="/images/site-cuda/logo.svg" style="margin:10px; display: block; float:left;">
+                <div style="display:inline; float:right;">
+                    <div class="nav-list uppercase" id="nav-list-all">home</div>
+                    <div class="nav-list uppercase" id="nav-list-web">about</div>
+                    <div class="nav-list uppercase" id="nav-list-icons">work</div>
+                    <div class="nav-list uppercase" id="nav-list-apps">blog</div>
+                    <div class="nav-list uppercase" id="nav-list-apps">contact</div>
+                </div>
             </div>
+    
+            <h1 style="margin-top: 100px; margin-bottom: 20px;">
+                Hi there! We are the new kids on the block<br>
+                and we build awesome websites and mobile apps.
+            </h1>
+            <div class="link-box" style="margin-bottom: 150px">Work With Us!</div>
         </div>
+    </div>
 
-        <div style="margin-top: 100px; margin-bottom: 20px;">
-            Hi there! We are the new kids on the block<br>
-            and we build awesome websites and mobile apps.
+    <div class="clearfix" id="cuda-services">
+        <div class="view-panel">
+            <h1 class="uppercase">
+                Services We Provide
+            </h1>
+            <h2>
+                We are working with both individuals and businesses from all over the globe<br>
+                to create awesome websites and applications.
+            </h2>
         </div>
-        <div class="link-box" style="margin-bottom: 150px">Work With Us!</div>
     </div>
 
-    <div class="view-panel" id="cuda-services">
-        <h1>
-            Services We Provide
-        </h1>
-        <h2>
-            We are working with both individuals and businesses from all over the globe<br>
-            to create awesome websites and applications.
-        </h2>
-    </div>
-
-    <div class="view-panel" id="cuda-team">
-        <h1>
-            Meet Our Beautiful Team
-        </h1>
-        <h2>
-            We are a small team of designers and developers, who help brands with big ideas.
-        </h2>
-
-    </div>
-
-    <div class="view-panel" id="cuda-skills">
-        <h1>
-            we got skills!
-        </h1>
-        <h2>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br>
-            tempor incididunt ut labore et dolore magna aliqua.
-        </h2>
-
-    </div>
-
-    <div class="view-panel" id="cuda-portfolio">
-        <h1>
-            our portfolio!
-        </h1>
-        <h2>
-            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet<br>
-            consectetur, adipisci velit, sed quia non numquam
-        </h2>
-        <div>
-            <div class="link-box">all</div>
-            <div class="link-box">web</div>
-            <div class="link-box">apps</div>
-            <div class="link-box">icons</div>
+    <div class="clearfix" id="cuda-team">
+        <div class="view-panel">
+            <h1 class="uppercase">
+                Meet Our Beautiful Team
+            </h1>
+            <h2>
+                We are a small team of designers and developers, who help brands with big ideas.
+            </h2>
         </div>
-        <div class="link-box">load more projects</div>
     </div>
 
-    <div class="view-panel" id="cuda-testimonials">
-        <h1>
-            what people say about us
-        </h1>
-        <h2>
-            Our clients love us!
-        </h2>
+    <div class="clearfix" id="cuda-skill">
+        <div class="view-panel">
+            <h1 class="uppercase">
+                we got skills!
+            </h1>
+            <h2>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br>
+                tempor incididunt ut labore et dolore magna aliqua.
+            </h2>
+        </div>
     </div>
 
-    <div class="view-panel" id="cuda-in-touch">
-        <h1>
-            get in touch
-        </h1>
-        <h2>
-            1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111
-        </h2>
+    <div class="clearfix" id="cuda-portfolio">
+        <div class="view-panel">
+            <h1 class="uppercase">
+                our portfolio
+            </h1>
+            <h2>
+                Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet<br>
+                consectetur, adipisci velit, sed quia non numquam
+            </h2>
+            <div>
+                <div class="portfolio-list uppercase" id="portfolio-list-web">web</div>
+                <div class="portfolio-list uppercase" id="portfolio-list-all">all</div>
+                <div class="portfolio-list uppercase" id="portfolio-list-icons">icons</div>
+                <div class="portfolio-list uppercase" id="portfolio-list-apps">apps</div>
+            </div>
+            <div class="link-box">load more projects</div>
+        </div>
     </div>
 
+    <div class="clearfix" id="cuda-testimonials">
+        <div class="view-panel">
+            <h1 class="uppercase">
+                what people say about us
+            </h1>
+            <h2>
+                Our clients love us!
+            </h2>
+        </div>
+    </div>
+
+    <div class="clearfix" id="cuda-in-touch">
+        <div class="view-panel">
+            <h1 class="uppercase">
+                get in touch
+            </h1>
+            <h2>
+                1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111
+            </h2>
+        </div>
+    </div>
 
     <footer>
     </footer>
