--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 </head>
 
-<title>Front End Practice - Home</title>
+<title>VanillaBeanBag - Home</title>
 
 <body>
     <header>
