--- a/views/pages/site-cuda.ejs
+++ b/views/pages/site-cuda.ejs
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="/images/vanillabeanbag-32x32.png" sizes="32x32">
 </head>
 
-<title>Front End Practice - Cuda</title>
+<title>VBB - Cuda</title>
 
 <body>
     <header>
@@ -25,7 +25,7 @@
                     <div class="nav-list uppercase" id="nav-list-apps">contact</div>
                 </div>
             </div>
-    
+
             <h1 style="margin-top: 100px; margin-bottom: 20px;">
                 Hi there! We are the new kids on the block<br>
                 and we build awesome websites and mobile apps.
@@ -43,6 +43,44 @@
                 We are working with both individuals and businesses from all over the globe<br>
                 to create awesome websites and applications.
             </h2>
+            <div>
+                <li class="list-services" id="services-brand">
+                    <img src="images/site-cuda/services-flag.png">
+                    <div class="uppercase">
+                        Branding
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
+                    </div>
+                </li>
+                <li class="list-services" id="services-design">
+                    <img src="images/site-cuda/services-pencil.png">
+                    <div class="uppercase">
+                        design
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
+                    </div>
+                </li>
+                <li class="list-services" id="services-dev">
+                    <img src="images/site-cuda/services-gear.png">
+                    <div class="uppercase">
+                        development
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
+                    </div>
+                </li>
+                <li class="list-services" id="services-rocket">
+                    <img src="images/site-cuda/services-rocket.png">
+                    <div class="uppercase">
+                        rocket science
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
+                    </div>
+                </li>
+            </div>
         </div>
     </div>
 
@@ -54,18 +92,69 @@
             <h2>
                 We are a small team of designers and developers, who help brands with big ideas.
             </h2>
+            <div>
+                <li class="list-team" id="team-person">
+                    <img src="images/site-cuda/team-mugshot.png">
+                    <div class="uppercase">
+                        Anne Hathaway
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
+                    </div>
+                </li>
+                <li class="list-team" id="team-person">
+                    <img src="images/site-cuda/team-mugshot.png">
+                    <div class="uppercase">
+                        Kate Upton
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
+                    </div>
+                </li>
+                <li class="list-team" id="team-person">
+                    <img src="images/site-cuda/team-mugshot.png">
+                    <div class="uppercase">
+                        Olivia Wilde
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
+                    </div>
+                </li>
+                <li class="list-team" id="team-person">
+                    <img src="images/site-cuda/team-mugshot.png">
+                    <div class="uppercase">
+                        Ashley Greene
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
+                    </div>
+                </li>
+            </div>
         </div>
     </div>
 
-    <div class="clearfix" id="cuda-skill">
+    <div class="clearfix" id="cuda-skills">
         <div class="view-panel">
             <h1 class="uppercase">
                 we got skills!
             </h1>
             <h2>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br>
-                tempor incididunt ut labore et dolore magna aliqua.
+                We are working with both individuals and businesses from all over the globe to create awesome websites and applications.
             </h2>
+            <div>
+                <li class="list-team" id="team-person">
+                    <img src="images/site-cuda/skills-des.png">
+                </li>
+                <li class="list-team" id="team-person">
+                    <img src="images/site-cuda/skills-web.png">
+                </li>
+                <li class="list-team" id="team-person">
+                    <img src="images/site-cuda/skills-graphic.png">
+                </li>
+                <li class="list-team" id="team-person">
+                    <img src="images/site-cuda/skills-ui.png">
+                </li>
+            </div>
         </div>
     </div>
 
