--- a/views/pages/site-cuda.ejs
+++ b/views/pages/site-cuda.ejs
@@ -13,7 +13,7 @@
     <header>
     </header>
 
-    <div class="clearfix" id="cuda-welcome">
+    <div class="clearfix cuda-page" id="cuda-welcome">
         <div class="view-panel" style="display:block;">
             <div class="clearfix" style="margin-top: 15px;">
                 <img src="/images/site-cuda/logo.svg" style="margin:10px; display: block; float:left;">
@@ -26,19 +26,20 @@
                 </div>
             </div>
 
-            <h1 style="margin-top: 100px; margin-bottom: 20px;">
+            <h1 style="margin-top: 100px;">
                 Hi there! We are the new kids on the block<br>
                 and we build awesome websites and mobile apps.
             </h1>
-            <div class="link-box" style="margin-bottom: 150px">Work With Us!</div>
+            <div class="link-box">Work With Us!</div>
         </div>
     </div>
 
-    <div class="clearfix" id="cuda-services">
+    <div class="clearfix cuda-page" id="cuda-services">
         <div class="view-panel">
             <h1 class="uppercase">
                 Services We Provide
             </h1>
+            <img class="title-line" src="images/site-cuda/services-line.png">
             <h2>
                 We are working with both individuals and businesses from all over the globe<br>
                 to create awesome websites and applications.
@@ -84,7 +85,7 @@
         </div>
     </div>
 
-    <div class="clearfix" id="cuda-team">
+    <div class="clearfix cuda-page" id="cuda-team">
         <div class="view-panel">
             <h1 class="uppercase">
                 Meet Our Beautiful Team
@@ -94,7 +95,7 @@
             </h2>
             <div>
                 <li class="list-team" id="team-person">
-                    <img src="images/site-cuda/team-mugshot.png">
+                    <img class="team-mug" src="images/site-cuda/team-mugshot.png">
                     <div class="uppercase">
                         Anne Hathaway
                     </div>
@@ -103,7 +104,7 @@
                     </div>
                 </li>
                 <li class="list-team" id="team-person">
-                    <img src="images/site-cuda/team-mugshot.png">
+                    <img class="team-mug" src="images/site-cuda/team-mugshot.png">
                     <div class="uppercase">
                         Kate Upton
                     </div>
@@ -112,7 +113,7 @@
                     </div>
                 </li>
                 <li class="list-team" id="team-person">
-                    <img src="images/site-cuda/team-mugshot.png">
+                    <img class="team-mug" src="images/site-cuda/team-mugshot.png">
                     <div class="uppercase">
                         Olivia Wilde
                     </div>
@@ -121,7 +122,7 @@
                     </div>
                 </li>
                 <li class="list-team" id="team-person">
-                    <img src="images/site-cuda/team-mugshot.png">
+                    <img class="team-mug" src="images/site-cuda/team-mugshot.png">
                     <div class="uppercase">
                         Ashley Greene
                     </div>
@@ -133,32 +134,45 @@
         </div>
     </div>
 
-    <div class="clearfix" id="cuda-skills">
+    <div class="clearfix cuda-page" id="cuda-skills">
         <div class="view-panel">
             <h1 class="uppercase">
                 we got skills!
             </h1>
             <h2>
-                We are working with both individuals and businesses from all over the globe to create awesome websites and applications.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br>
+                tempor incididunt ut labore et dolore magna aliqua.
             </h2>
             <div>
-                <li class="list-team" id="team-person">
+                <li class="list-skills">
                     <img src="images/site-cuda/skills-des.png">
+                    <div>
+                    Web Design
+                    </div>
                 </li>
-                <li class="list-team" id="team-person">
+                <li class="list-skills">
                     <img src="images/site-cuda/skills-web.png">
+                    <div>
+                    HTML / CSS    
+                    </div>
                 </li>
-                <li class="list-team" id="team-person">
+                <li class="list-skills">
                     <img src="images/site-cuda/skills-graphic.png">
+                    <div>
+                    Graphic Design    
+                    </div>
                 </li>
-                <li class="list-team" id="team-person">
+                <li class="list-skills">
                     <img src="images/site-cuda/skills-ui.png">
+                    <div>
+                    UI / UX
+                    </div>
                 </li>
             </div>
         </div>
     </div>
 
-    <div class="clearfix" id="cuda-portfolio">
+    <div class="clearfix cuda-page" id="cuda-portfolio">
         <div class="view-panel">
             <h1 class="uppercase">
                 our portfolio
@@ -177,7 +191,7 @@
         </div>
     </div>
 
-    <div class="clearfix" id="cuda-testimonials">
+    <div class="clearfix cuda-page" id="cuda-testimonials">
         <div class="view-panel">
             <h1 class="uppercase">
                 what people say about us
@@ -188,7 +202,7 @@
         </div>
     </div>
 
-    <div class="clearfix" id="cuda-in-touch">
+    <div class="clearfix cuda-page" id="cuda-in-touch">
         <div class="view-panel">
             <h1 class="uppercase">
                 get in touch
@@ -200,6 +214,31 @@
     </div>
 
     <footer>
+        <div class="clearfix" id="cuda-other-sites">
+            <div class="view-panel">
+                <li class="list-other-sites">
+                    Facebook
+                </li>
+                <li class="list-other-sites">
+                    Twitter
+                </li>
+                <li class="list-other-sites">
+                    Google+
+                </li>
+                <li class="list-other-sites">
+                    LinkedIn
+                </li>
+                <li class="list-other-sites">
+                    Behance
+                </li>
+                <li class="list-other-sites">
+                    Dribble
+                </li>
+                <li class="list-other-sites">
+                    GitHub
+                </li>
+            </div>
+        </div>
     </footer>
 
 </body>
