--- a/public/stylesheets/app-cuda.css
+++ b/public/stylesheets/app-cuda.css
@@ -11,6 +11,7 @@
 h1{
     font-weight: bold;
     font-size: 250%;
+    margin-bottom: 0px;
 }
 
 h2{
@@ -60,8 +61,16 @@ h2{
     margin-right: 10px;
     /*outline: 1px dashed black;*/
 }
-.list-services div{
-    font-size: 100%;
+.list-services-title{
+    margin-top: 54px;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+.list-services-description{
+    margin-top: 27px;
+    margin-left: 18px;
+    margin-right: 18px;
+    font-size: 1em;
 }
 .list-skills{
     list-style-type: none;
@@ -83,6 +92,39 @@ h2{
 }
 .list-team div{
     font-size: 100%;
+}
+.list-team .list-team-name{
+    font-size: 1.5em;
+}
+.list-team .list-team-title{
+    font-size: 1em;
+    color: #30bae7;
+}
+.list-team div:nth-child(4){
+    margin-top: 10px;
+}
+.list-team div:nth-child(5){
+    margin-top: 10px;
+}
+.list-team-contact{
+    list-style-type: none;
+    /*display: inline;*/
+    display: inline-block;
+    /*border-radius: 100%;*/
+}
+.list-team-contact .contact-icon{
+    /*display: inline-block;*/
+    background-color: #bdd1df;
+    width: 1.5em;
+    height: 1.5em;
+    margin-left: 0.2em;
+    margin-right: 0.2em;
+    color: #ffffff;
+    border-radius: 100%;
+}
+.list-team-contact .contact-icon:hover{
+    background-color: #758189;
+    cursor: pointer;
 }
 .nav-list:hover{
     background-color:#4d2f5c;
@@ -132,6 +174,19 @@ h2{
     padding-top: 58px;
     background-color: #87509C;
     color: #ffffff;
+}
+#cuda-welcome .link-box{
+    margin-top: 54px;
+    padding-top: 1.13em;
+    padding-bottom: 1.13em;
+    font-size: 1.13em;
+    width: 290px;
+    background-color: #eb7d4b;
+    color: #ffffff;
+}
+#cuda-welcome .link-box:hover{
+    background-color: #bf673f;
+    cursor: pointer;
 }
 
 #cuda-services{
