--- a/views/pages/site-cuda.ejs
+++ b/views/pages/site-cuda.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/superhero/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/stylesheets/app-cuda.css">
     <link rel="icon" type="image/png" href="/images/vanillabeanbag-32x32.png" sizes="32x32">
 </head>
@@ -30,7 +31,7 @@
                 Hi there! We are the new kids on the block<br>
                 and we build awesome websites and mobile apps.
             </h1>
-            <div class="link-box">Work With Us!</div>
+            <div class="link-box uppercase">Work With Us!</div>
         </div>
     </div>
 
@@ -47,37 +48,37 @@
             <div>
                 <li class="list-services" id="services-brand">
                     <img src="images/site-cuda/services-flag.png">
-                    <div class="uppercase">
+                    <div class="list-services-title uppercase">
                         Branding
                     </div>
-                    <div>
+                    <div class="list-services-description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
                 </li>
                 <li class="list-services" id="services-design">
                     <img src="images/site-cuda/services-pencil.png">
-                    <div class="uppercase">
+                    <div class="list-services-title uppercase">
                         design
                     </div>
-                    <div>
+                    <div class="list-services-description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
                 </li>
                 <li class="list-services" id="services-dev">
                     <img src="images/site-cuda/services-gear.png">
-                    <div class="uppercase">
+                    <div class="list-services-title uppercase">
                         development
                     </div>
-                    <div>
+                    <div class="list-services-description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
                 </li>
                 <li class="list-services" id="services-rocket">
                     <img src="images/site-cuda/services-rocket.png">
-                    <div class="uppercase">
+                    <div class="list-services-title uppercase">
                         rocket science
                     </div>
-                    <div>
+                    <div class="list-services-description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
                 </li>
@@ -90,45 +91,108 @@
             <h1 class="uppercase">
                 Meet Our Beautiful Team
             </h1>
+            <img class="title-line" src="images/site-cuda/team-line.png">
             <h2>
                 We are a small team of designers and developers, who help brands with big ideas.
             </h2>
             <div>
                 <li class="list-team" id="team-person">
                     <img class="team-mug" src="images/site-cuda/team-mugshot.png">
-                    <div class="uppercase">
+                    <div class="list-team-name uppercase">
                         Anne Hathaway
                     </div>
+                    <div class="list-team-title">
+                        CEO / Marketing Guru
+                    </div>
                     <div>
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
+                    <ul style="text-align:center; padding: 0px;">
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-facebook"></i></div>
+                        </li>
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-twitter"></i></div>
+                        </li>
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-linkedin"></i></div>
+                        </li>
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-envelope"></i></div>
+                        </li>
+                    </ul>
                 </li>
                 <li class="list-team" id="team-person">
                     <img class="team-mug" src="images/site-cuda/team-mugshot.png">
-                    <div class="uppercase">
+                    <div class="list-team-name uppercase">
                         Kate Upton
                     </div>
+                    <div class="list-team-title">
+                        Creative Director
+                    </div>
                     <div>
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
+                    <ul style="text-align:center; padding: 0px;">
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-twitter"></i></div>
+                        </li>
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-linkedin"></i></div>
+                        </li>
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-envelope"></i></div>
+                        </li>
+                    </ul>
                 </li>
                 <li class="list-team" id="team-person">
                     <img class="team-mug" src="images/site-cuda/team-mugshot.png">
-                    <div class="uppercase">
+                    <div class="list-team-name uppercase">
                         Olivia Wilde
                     </div>
+                    <div class="list-team-title">
+                        Lead Designer
+                    </div>
                     <div>
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
+                    <ul style="text-align:center; padding: 0px;">
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-facebook"></i></div>
+                        </li>
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-twitter"></i></div>
+                        </li>
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-linkedin"></i></div>
+                        </li>
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-envelope"></i></div>
+                        </li>
+                    </ul>
                 </li>
                 <li class="list-team" id="team-person">
                     <img class="team-mug" src="images/site-cuda/team-mugshot.png">
-                    <div class="uppercase">
+                    <div class="list-team-name uppercase">
                         Ashley Greene
+                    </div>
+                    <div class="list-team-title">
+                        SEO / Developer
                     </div>
                     <div>
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
+                    <ul style="text-align:center; padding: 0px;">
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-facebook"></i></div>
+                        </li>
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-twitter"></i></div>
+                        </li>
+                        <li class="list-team-contact">
+                            <div class="contact-icon"><i class="fa fa-envelope"></i></div>
+                        </li>
+                    </ul>
                 </li>
             </div>
         </div>
@@ -139,6 +203,7 @@
             <h1 class="uppercase">
                 we got skills!
             </h1>
+            <img class="title-line" src="images/site-cuda/skills-line.png">
             <h2>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br>
                 tempor incididunt ut labore et dolore magna aliqua.
@@ -177,13 +242,14 @@
             <h1 class="uppercase">
                 our portfolio
             </h1>
+            <img class="title-line" src="images/site-cuda/portfolio-line.png">
             <h2>
                 Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet<br>
                 consectetur, adipisci velit, sed quia non numquam
             </h2>
             <div>
-                <div class="portfolio-list uppercase" id="portfolio-list-web">web</div>
-                <div class="portfolio-list uppercase" id="portfolio-list-all">all</div>
+                <div class="portfolio-list uppercase" id="portfolio-list-web">all</div>
+                <div class="portfolio-list uppercase" id="portfolio-list-all">web</div>
                 <div class="portfolio-list uppercase" id="portfolio-list-icons">icons</div>
                 <div class="portfolio-list uppercase" id="portfolio-list-apps">apps</div>
             </div>
@@ -196,6 +262,7 @@
             <h1 class="uppercase">
                 what people say about us
             </h1>
+            <img class="title-line" src="images/site-cuda/reviews-line.png">
             <h2>
                 Our clients love us!
             </h2>
@@ -207,6 +274,7 @@
             <h1 class="uppercase">
                 get in touch
             </h1>
+            <img class="title-line" src="images/site-cuda/contact-line.png">
             <h2>
                 1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111
             </h2>
