--- a/views/pages/site-cuda.ejs
+++ b/views/pages/site-cuda.ejs
@@ -250,10 +250,36 @@
             <div>
                 <div class="portfolio-list uppercase" id="portfolio-list-web">all</div>
                 <div class="portfolio-list uppercase" id="portfolio-list-all">web</div>
-                <div class="portfolio-list uppercase" id="portfolio-list-icons">icons</div>
-                <div class="portfolio-list uppercase" id="portfolio-list-apps">apps</div>
+                <div class="portfolio-list uppercase" id="portfolio-list-icons">apps</div>
+                <div class="portfolio-list uppercase" id="portfolio-list-apps">icons</div>
             </div>
-            <div class="link-box">load more projects</div>
+            <ul>
+                <li class="list-projects">
+                    <img src="images/site-cuda/profile-perspective.png">
+                    <div class="uppercase">
+                    isometric perspective mock-up
+                    </div>
+                </li>
+                <li class="list-projects">
+                    <img src="images/site-cuda/profile-ui.png">
+                    <div class="uppercase">
+                    time zone app ui
+                    </div>
+                </li>
+                <li class="list-projects">
+                    <img src="images/site-cuda/profile-viro.png">
+                    <div class="uppercase">
+                    viro media players ui  
+                    </div>
+                </li>
+                <li class="list-projects">
+                    <img src="images/site-cuda/profile-blog.png">
+                    <div class="uppercase">
+                    blog / magazine flat UI kit
+                    </div>
+                </li>
+            </ul>
+            <div class="link-box uppercase">load more projects</div>
         </div>
     </div>
 
@@ -266,6 +292,32 @@
             <h2>
                 Our clients love us!
             </h2>
+            <ul style="margin-top: 62px;">
+                <li class="list-testimonials">
+                    <img src="images/site-cuda/profile-holder.png">
+                    <div>
+                    isometric perspective mock-up
+                    </div>
+                </li>
+                <li class="list-testimonials">
+                    <img src="images/site-cuda/profile-holder.png">
+                    <div>
+                    time zone app ui
+                    </div>
+                </li>
+                <li class="list-testimonials">
+                    <img src="images/site-cuda/profile-holder.png">
+                    <div>
+                    viro media players ui  
+                    </div>
+                </li>
+                <li class="list-testimonials">
+                    <img src="images/site-cuda/profile-holder.png">
+                    <div>
+                    blog / magazine flat UI kit
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
 
@@ -278,6 +330,7 @@
             <h2>
                 1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111
             </h2>
+            <div class="link-box uppercase">send message</div>
         </div>
     </div>
 
