--- a/views/pages/site-cuda.ejs
+++ b/views/pages/site-cuda.ejs
@@ -97,7 +97,7 @@
             </h2>
             <div>
                 <li class="list-team" id="team-person">
-                    <img class="team-mug" src="images/site-cuda/team-mugshot.png">
+                    <img src="images/site-cuda/profile-holder.png">
                     <div class="list-team-name uppercase">
                         Anne Hathaway
                     </div>
@@ -123,7 +123,7 @@
                     </ul>
                 </li>
                 <li class="list-team" id="team-person">
-                    <img class="team-mug" src="images/site-cuda/team-mugshot.png">
+                    <img src="images/site-cuda/profile-holder.png">
                     <div class="list-team-name uppercase">
                         Kate Upton
                     </div>
@@ -146,7 +146,7 @@
                     </ul>
                 </li>
                 <li class="list-team" id="team-person">
-                    <img class="team-mug" src="images/site-cuda/team-mugshot.png">
+                    <img src="images/site-cuda/profile-holder.png">
                     <div class="list-team-name uppercase">
                         Olivia Wilde
                     </div>
@@ -172,7 +172,7 @@
                     </ul>
                 </li>
                 <li class="list-team" id="team-person">
-                    <img class="team-mug" src="images/site-cuda/team-mugshot.png">
+                    <img src="images/site-cuda/profile-holder.png">
                     <div class="list-team-name uppercase">
                         Ashley Greene
                     </div>
@@ -292,29 +292,61 @@
             <h2>
                 Our clients love us!
             </h2>
-            <ul style="margin-top: 62px;">
+            <ul>
                 <li class="list-testimonials">
                     <img src="images/site-cuda/profile-holder.png">
                     <div>
-                    isometric perspective mock-up
+                        <div class="quote-text">
+                        “Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque.”
+                        </div>
+                        <div class="quote-name">
+                            Chanel Iman
+                        </div>    
+                        <div class="quote-name">
+                            CEO of Pinterest
+                        </div>
                     </div>
                 </li>
                 <li class="list-testimonials">
                     <img src="images/site-cuda/profile-holder.png">
                     <div>
-                    time zone app ui
+                        <div class="quote-text">
+                        “Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.”
+                        </div>
+                        <div class="quote-name">
+                            Adrianna Lima
+                        </div>    
+                        <div class="quote-name">
+                            Founder of Instagram
+                        </div>
                     </div>
                 </li>
                 <li class="list-testimonials">
                     <img src="images/site-cuda/profile-holder.png">
                     <div>
-                    viro media players ui  
+                        <div class="quote-text">
+                        “Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.”
+                        </div>
+                        <div class="quote-name">
+                            Anne Hathaway
+                        </div>    
+                        <div class="quote-name">
+                            Lead Designer at Behance
+                        </div>
                     </div>
                 </li>
                 <li class="list-testimonials">
                     <img src="images/site-cuda/profile-holder.png">
                     <div>
-                    blog / magazine flat UI kit
+                        <div class="quote-text">
+                        “Phasellus non purus vel arcu tempor commodo. Fusce semper, purus vel luctus molestie, risus sem cursus neque.”
+                        </div>
+                        <div class="quote-name">
+                            Emma Stone
+                        </div>    
+                        <div class="quote-name">
+                            Co-Founder of Shazam
+                        </div>
                     </div>
                 </li>
             </ul>
@@ -330,6 +362,12 @@
             <h2>
                 1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111
             </h2>
+            <form style="width: 540px; text-align: left;">
+                <input class="message-substance" type="text" name="contact-name" placeholder="Your Name *" required></input>
+                <input class="message-substance" type="text" name="contact-email" placeholder="Your Email *" required></input>
+                <textarea rows="4" class="message-substance" style="width:100%;" name="contact-message" placeholder="Your Message *" required></textarea>
+                <!--<input class="message-substance" style="width:100%;" type="text" name="contact-message" placeholder="Your Message *" required></input>-->
+            </form>
             <div class="link-box uppercase">send message</div>
         </div>
     </div>
