--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,9 +20,10 @@
             <hr>
             <h3>Hello {{yourName}}!</h3>
             <h4>Made using NodeJS, Express, Angular, EJS</h4>
+            <a href='/drinks'>Drinks</a><br>
             <a href='/sage'>Sage</a><br>
-            <a href='/site-cuda'>Cuda</a><br>
-            <a href='/drinks'>Drinks</a>
+            <a href='/cuda'>Cuda</a><br>
+            <a href='/notify'>Notify</a><br>
         </div>
     </div>
 
